creusot/tests/should_fail/prusti/logic/home_mismatch.stderr
error[creusot]: function was supposed to return data with home `'x` but it is returning data with home `'0h`
 --> home_mismatch.rs:6:5
  |
6 |     x
  |     ^

error: aborting due to previous error

